feat: localize kit menus